system/longhorn/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: longhorn-frontend
  namespace: longhorn
spec:
  parentRefs:
    - name: eg
      namespace: envoy-gateway
  hostnames:
    - longhorn.domain.example.com
  rules:
    - backendRefs:
        - kind: Service
          name: longhorn-frontend
          port: 80
      matches:
        - path:
            type: PathPrefix
            value: /
